--- a/td3/views/todos/index.html
+++ b/td3/views/todos/index.html
@@ -4,10 +4,12 @@
 		<form ng-submit="" novalidate>
 			<input type="text" ng-model="list.label" value="{{list.label}}" />
 			<button ng-click="updateList(list.label)">Modifier</button>
+			<br/><br/>
+			<input type="text" ng-model="Todo.todo.text" value="" />
+			<button ng-click="createTodo()">Ajouter todo</button>
 		</form>
+		{{Todo}}
 		<li ng-repeat="todo in todos">{{todo.text}}</li>
-		<!-- <button ng-click="deleteTodo()">Supprimer</button> -->
-		<div>ID list : {{list.id}}</div>
-		<!-- <a ng-href="{{toto.id}}/delete">Supprimer</button> -->
+		
 	</ul>
 </div>
