--- a/td3/views/todos/index.html
+++ b/td3/views/todos/index.html
@@ -8,8 +8,12 @@
 			<input type="text" ng-model="Todo.todo.text" value="" />
 			<button ng-click="createTodo()">Ajouter todo</button>
 		</form>
-		{{Todo}}
-		<li ng-repeat="todo in todos">{{todo.text}}</li>
-		
+		<li ng-repeat="todo in todos">
+			<a ng-click="showDetails = ! showDetails" ng-href="#/lists/{{list._id.$oid}}/{{todo._id.$oid}}">{{todo.text}}</a>				
+			<div class="todos-details" ng-show="showDetails">
+				<button ng-click="deleteTodo()">Supprimer todo</button>				
+			</div>		
+		</li>
+		{{todolists}}
 	</ul>
 </div>
