--- a/td3/views/todos/index.html
+++ b/td3/views/todos/index.html
@@ -11,7 +11,10 @@
 		<li ng-repeat="todo in todos">
 			<a ng-click="showDetails = ! showDetails" ng-href="#/lists/{{list._id.$oid}}/{{todo._id.$oid}}">{{todo.text}}</a>				
 			<div class="todos-details" ng-show="showDetails">
-				<button ng-click="deleteTodo()">Supprimer todo</button>				
+				<button ng-click="deleteTodo()">Supprimer todo</button>
+				<br/><br/>
+				<input type="text" ng-model="todo.text" required ng-maxlength="30">
+     			<button ng-click="updateTodo(todo.text)">Modifier todo</button>				
 			</div>		
 		</li>
 		{{todolists}}
