--- a/td3/css/style.css
+++ b/td3/css/style.css
@@ -33,7 +33,7 @@ table {
 
 #header {
   display: block;
-  background: darkblue;
+  background: #00003f;
   padding: 8px;
   margin-bottom: 10px; }
 
