--- a/td3/scss/_variable.scss
+++ b/td3/scss/_variable.scss
@@ -2,3 +2,13 @@
 $couleurHeader:darken(darkblue,15);
 $couleurTexte:whitesmoke;
 $couleurLien:orange;
+
+/* Variable de la grille */
+$container-width: 940px;
+$grille-goutiere: 1%;
+$nb-colonnes: 20;
+
+$md-screen: 768px;
+$sm-screen: 480px;
+
+$violet-fonce: #7B2C96;
