--- a/td3/css/style.css
+++ b/td3/css/style.css
@@ -1190,31 +1190,33 @@ a {
 body {
   background-image: url(../img/galaxy.jpeg); }
 
-#main .clearBackgroundSidebar {
-  background: rgba(255, 255, 255, 0.25);
-  padding: 10px;
-  min-width: 125px;
-  max-width: 165px;
-  border-radius: 0px 5px 5px 0px;
-  border: solid 1px black;
-  display: inline-block;
-  height: 100%;
-  box-sizing: border-box; }
-  #main .clearBackgroundSidebar #sidebar {
-    height: 80vh;
+#main {
+  padding-top: 1%; }
+  #main .clearBackgroundSidebar {
+    background: rgba(255, 255, 255, 0.25);
+    padding: 10px;
+    min-width: 125px;
+    max-width: 165px;
+    border-radius: 0px 5px 5px 0px;
+    border: solid 1px black;
+    display: inline-block;
+    height: 100%;
     box-sizing: border-box; }
-#main .clearBackgroundMain {
-  background: rgba(255, 255, 255, 0.25);
-  padding: 10px;
-  margin: 0px 10px;
-  border-radius: 5px;
-  border: solid 1px black;
-  display: inline-block; }
-  #main .clearBackgroundMain #main-content {
-    height: 80vh; }
-    #main .clearBackgroundMain #main-content h1 {
-      display: inline-block;
-      margin-bottom: 10px; }
+    #main .clearBackgroundSidebar #sidebar {
+      height: 80vh;
+      box-sizing: border-box; }
+  #main .clearBackgroundMain {
+    background: rgba(255, 255, 255, 0.25);
+    padding: 10px;
+    margin: 0px 10px;
+    border-radius: 5px;
+    border: solid 1px black;
+    display: inline-block; }
+    #main .clearBackgroundMain #main-content {
+      height: 80vh; }
+      #main .clearBackgroundMain #main-content h1 {
+        display: inline-block;
+        margin-bottom: 10px; }
 
 ul li {
   margin: 10px; }
