--- a/td3/scss/_variable.scss
+++ b/td3/scss/_variable.scss
@@ -1,7 +1,7 @@
 //Couleur
 $couleurHeader:darken(darkblue,15);
 $couleurTexte:whitesmoke;
-$couleurLien:orange;
+$couleurLien:#FFFDBE;
 
 /* Variable de la grille */
 $container-width: 940px;
