--- a/td3/css/style.css
+++ b/td3/css/style.css
@@ -39,152 +39,152 @@ table {
   border: solid 1px black;
   box-shadow: 3px 3px 3px black; }
 
-.row, #main {
+.row, #main, #main .clearBackgroundMain #main-content .ulTodo form {
   display: block;
   margin-top: 12px;
   margin-bottom: 12px;
   clear: left;
   overflow: hidden; }
-  .row + div, #main + div {
+  .row + div, #main + div, #main .clearBackgroundMain #main-content .ulTodo form + div {
     clear: left; }
   @media screen and (min-width: 768px) {
-    .row [class*="offset-1"]:first-child, #main [class*="offset-1"]:first-child {
+    .row [class*="offset-1"]:first-child, #main [class*="offset-1"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class*="offset-1"]:first-child {
       clear: left;
       margin-left: 5.45%; }
-    .row [class="span-1"]:first-child, #main [class="span-1"]:first-child {
+    .row [class="span-1"]:first-child, #main [class="span-1"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class="span-1"]:first-child {
       clear: left;
       margin-left: 0.5%; } }
   @media screen and (min-width: 768px) {
-    .row [class*="offset-2"]:first-child, #main [class*="offset-2"]:first-child {
+    .row [class*="offset-2"]:first-child, #main [class*="offset-2"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class*="offset-2"]:first-child {
       clear: left;
       margin-left: 10.4%; }
-    .row [class="span-2"]:first-child, #main [class="span-2"]:first-child {
+    .row [class="span-2"]:first-child, #main [class="span-2"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class="span-2"]:first-child {
       clear: left;
       margin-left: 0.5%; } }
   @media screen and (min-width: 768px) {
-    .row [class*="offset-3"]:first-child, #main [class*="offset-3"]:first-child {
+    .row [class*="offset-3"]:first-child, #main [class*="offset-3"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class*="offset-3"]:first-child {
       clear: left;
       margin-left: 15.35%; }
-    .row [class="span-3"]:first-child, #main [class="span-3"]:first-child {
+    .row [class="span-3"]:first-child, #main [class="span-3"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class="span-3"]:first-child {
       clear: left;
       margin-left: 0.5%; } }
   @media screen and (min-width: 768px) {
-    .row [class*="offset-4"]:first-child, #main [class*="offset-4"]:first-child {
+    .row [class*="offset-4"]:first-child, #main [class*="offset-4"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class*="offset-4"]:first-child {
       clear: left;
       margin-left: 20.3%; }
-    .row [class="span-4"]:first-child, #main [class="span-4"]:first-child {
+    .row [class="span-4"]:first-child, #main [class="span-4"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class="span-4"]:first-child {
       clear: left;
       margin-left: 0.5%; } }
   @media screen and (min-width: 768px) {
-    .row [class*="offset-5"]:first-child, #main [class*="offset-5"]:first-child {
+    .row [class*="offset-5"]:first-child, #main [class*="offset-5"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class*="offset-5"]:first-child {
       clear: left;
       margin-left: 25.25%; }
-    .row [class="span-5"]:first-child, #main [class="span-5"]:first-child {
+    .row [class="span-5"]:first-child, #main [class="span-5"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class="span-5"]:first-child {
       clear: left;
       margin-left: 0.5%; } }
   @media screen and (min-width: 768px) {
-    .row [class*="offset-6"]:first-child, #main [class*="offset-6"]:first-child {
+    .row [class*="offset-6"]:first-child, #main [class*="offset-6"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class*="offset-6"]:first-child {
       clear: left;
       margin-left: 30.2%; }
-    .row [class="span-6"]:first-child, #main [class="span-6"]:first-child {
+    .row [class="span-6"]:first-child, #main [class="span-6"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class="span-6"]:first-child {
       clear: left;
       margin-left: 0.5%; } }
   @media screen and (min-width: 768px) {
-    .row [class*="offset-7"]:first-child, #main [class*="offset-7"]:first-child {
+    .row [class*="offset-7"]:first-child, #main [class*="offset-7"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class*="offset-7"]:first-child {
       clear: left;
       margin-left: 35.15%; }
-    .row [class="span-7"]:first-child, #main [class="span-7"]:first-child {
+    .row [class="span-7"]:first-child, #main [class="span-7"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class="span-7"]:first-child {
       clear: left;
       margin-left: 0.5%; } }
   @media screen and (min-width: 768px) {
-    .row [class*="offset-8"]:first-child, #main [class*="offset-8"]:first-child {
+    .row [class*="offset-8"]:first-child, #main [class*="offset-8"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class*="offset-8"]:first-child {
       clear: left;
       margin-left: 40.1%; }
-    .row [class="span-8"]:first-child, #main [class="span-8"]:first-child {
+    .row [class="span-8"]:first-child, #main [class="span-8"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class="span-8"]:first-child {
       clear: left;
       margin-left: 0.5%; } }
   @media screen and (min-width: 768px) {
-    .row [class*="offset-9"]:first-child, #main [class*="offset-9"]:first-child {
+    .row [class*="offset-9"]:first-child, #main [class*="offset-9"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class*="offset-9"]:first-child {
       clear: left;
       margin-left: 45.05%; }
-    .row [class="span-9"]:first-child, #main [class="span-9"]:first-child {
+    .row [class="span-9"]:first-child, #main [class="span-9"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class="span-9"]:first-child {
       clear: left;
       margin-left: 0.5%; } }
   @media screen and (min-width: 768px) {
-    .row [class*="offset-10"]:first-child, #main [class*="offset-10"]:first-child {
+    .row [class*="offset-10"]:first-child, #main [class*="offset-10"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class*="offset-10"]:first-child {
       clear: left;
       margin-left: 50%; }
-    .row [class="span-10"]:first-child, #main [class="span-10"]:first-child {
+    .row [class="span-10"]:first-child, #main [class="span-10"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class="span-10"]:first-child {
       clear: left;
       margin-left: 0.5%; } }
   @media screen and (min-width: 768px) {
-    .row [class*="offset-11"]:first-child, #main [class*="offset-11"]:first-child {
+    .row [class*="offset-11"]:first-child, #main [class*="offset-11"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class*="offset-11"]:first-child {
       clear: left;
       margin-left: 54.95%; }
-    .row [class="span-11"]:first-child, #main [class="span-11"]:first-child {
+    .row [class="span-11"]:first-child, #main [class="span-11"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class="span-11"]:first-child {
       clear: left;
       margin-left: 0.5%; } }
   @media screen and (min-width: 768px) {
-    .row [class*="offset-12"]:first-child, #main [class*="offset-12"]:first-child {
+    .row [class*="offset-12"]:first-child, #main [class*="offset-12"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class*="offset-12"]:first-child {
       clear: left;
       margin-left: 59.9%; }
-    .row [class="span-12"]:first-child, #main [class="span-12"]:first-child {
+    .row [class="span-12"]:first-child, #main [class="span-12"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class="span-12"]:first-child {
       clear: left;
       margin-left: 0.5%; } }
   @media screen and (min-width: 768px) {
-    .row [class*="offset-13"]:first-child, #main [class*="offset-13"]:first-child {
+    .row [class*="offset-13"]:first-child, #main [class*="offset-13"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class*="offset-13"]:first-child {
       clear: left;
       margin-left: 64.85%; }
-    .row [class="span-13"]:first-child, #main [class="span-13"]:first-child {
+    .row [class="span-13"]:first-child, #main [class="span-13"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class="span-13"]:first-child {
       clear: left;
       margin-left: 0.5%; } }
   @media screen and (min-width: 768px) {
-    .row [class*="offset-14"]:first-child, #main [class*="offset-14"]:first-child {
+    .row [class*="offset-14"]:first-child, #main [class*="offset-14"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class*="offset-14"]:first-child {
       clear: left;
       margin-left: 69.8%; }
-    .row [class="span-14"]:first-child, #main [class="span-14"]:first-child {
+    .row [class="span-14"]:first-child, #main [class="span-14"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class="span-14"]:first-child {
       clear: left;
       margin-left: 0.5%; } }
   @media screen and (min-width: 768px) {
-    .row [class*="offset-15"]:first-child, #main [class*="offset-15"]:first-child {
+    .row [class*="offset-15"]:first-child, #main [class*="offset-15"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class*="offset-15"]:first-child {
       clear: left;
       margin-left: 74.75%; }
-    .row [class="span-15"]:first-child, #main [class="span-15"]:first-child {
+    .row [class="span-15"]:first-child, #main [class="span-15"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class="span-15"]:first-child {
       clear: left;
       margin-left: 0.5%; } }
   @media screen and (min-width: 768px) {
-    .row [class*="offset-16"]:first-child, #main [class*="offset-16"]:first-child {
+    .row [class*="offset-16"]:first-child, #main [class*="offset-16"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class*="offset-16"]:first-child {
       clear: left;
       margin-left: 79.7%; }
-    .row [class="span-16"]:first-child, #main [class="span-16"]:first-child {
+    .row [class="span-16"]:first-child, #main [class="span-16"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class="span-16"]:first-child {
       clear: left;
       margin-left: 0.5%; } }
   @media screen and (min-width: 768px) {
-    .row [class*="offset-17"]:first-child, #main [class*="offset-17"]:first-child {
+    .row [class*="offset-17"]:first-child, #main [class*="offset-17"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class*="offset-17"]:first-child {
       clear: left;
       margin-left: 84.65%; }
-    .row [class="span-17"]:first-child, #main [class="span-17"]:first-child {
+    .row [class="span-17"]:first-child, #main [class="span-17"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class="span-17"]:first-child {
       clear: left;
       margin-left: 0.5%; } }
   @media screen and (min-width: 768px) {
-    .row [class*="offset-18"]:first-child, #main [class*="offset-18"]:first-child {
+    .row [class*="offset-18"]:first-child, #main [class*="offset-18"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class*="offset-18"]:first-child {
       clear: left;
       margin-left: 89.6%; }
-    .row [class="span-18"]:first-child, #main [class="span-18"]:first-child {
+    .row [class="span-18"]:first-child, #main [class="span-18"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class="span-18"]:first-child {
       clear: left;
       margin-left: 0.5%; } }
   @media screen and (min-width: 768px) {
-    .row [class*="offset-19"]:first-child, #main [class*="offset-19"]:first-child {
+    .row [class*="offset-19"]:first-child, #main [class*="offset-19"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class*="offset-19"]:first-child {
       clear: left;
       margin-left: 94.55%; }
-    .row [class="span-19"]:first-child, #main [class="span-19"]:first-child {
+    .row [class="span-19"]:first-child, #main [class="span-19"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class="span-19"]:first-child {
       clear: left;
       margin-left: 0.5%; } }
   @media screen and (min-width: 768px) {
-    .row [class*="offset-20"]:first-child, #main [class*="offset-20"]:first-child {
+    .row [class*="offset-20"]:first-child, #main [class*="offset-20"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class*="offset-20"]:first-child {
       clear: left;
       margin-left: 99.5%; }
-    .row [class="span-20"]:first-child, #main [class="span-20"]:first-child {
+    .row [class="span-20"]:first-child, #main [class="span-20"]:first-child, #main .clearBackgroundMain #main-content .ulTodo form [class="span-20"]:first-child {
       clear: left;
       margin-left: 0.5%; } }
 
@@ -317,7 +317,7 @@ table {
   box-sizing: border-box;
   float: left; }
 
-.span-15 {
+.span-15, #main .clearBackgroundMain #main-content .ulTodo form {
   width: 74.25%;
   display: inline-block;
   padding-left: 1%;
@@ -344,7 +344,7 @@ table {
   box-sizing: border-box;
   float: left; }
 
-.span-18 {
+.span-18, #main .clearBackgroundMain #main-content {
   width: 89.1%;
   display: inline-block;
   padding-left: 1%;
@@ -372,7 +372,7 @@ table {
   float: left; }
 
 @media screen and (min-width: 769px) {
-  .offset-1 {
+  .offset-1, #main .clearBackgroundMain #main-content {
     margin-left: 4.95%;
     display: inline-block;
     box-sizing: border-box;
@@ -645,7 +645,7 @@ table {
     float: left; } }
 
 @media screen and (max-width: 768px) {
-  .span-md-15, #main .clearBackgroundMain {
+  .span-md-15, #main .clearBackgroundMain, #main .clearBackgroundMain #main-content .ulTodo form {
     width: 74.25%;
     display: inline-block;
     padding-left: 1%;
@@ -675,7 +675,7 @@ table {
     float: left; } }
 
 @media screen and (max-width: 768px) {
-  .span-md-18 {
+  .span-md-18, #main .clearBackgroundMain #main-content {
     width: 89.1%;
     display: inline-block;
     padding-left: 1%;
@@ -705,7 +705,7 @@ table {
     float: left; } }
 
 @media screen and (min-width: 480px) and (max-width: 768px) {
-  .offset-md-1 {
+  .offset-md-1, #main .clearBackgroundMain #main-content {
     margin-left: 4.95%;
     display: inline-block;
     box-sizing: border-box;
@@ -978,7 +978,7 @@ table {
     float: left; } }
 
 @media screen and (max-width: 480px) {
-  .span-sm-15 {
+  .span-sm-15, #main .clearBackgroundMain #main-content .ulTodo form {
     width: 74.25%;
     display: inline-block;
     padding-left: 1%;
@@ -1008,7 +1008,7 @@ table {
     float: left; } }
 
 @media screen and (max-width: 480px) {
-  .span-sm-18 {
+  .span-sm-18, #main .clearBackgroundMain #main-content {
     width: 89.1%;
     display: inline-block;
     padding-left: 1%;
@@ -1038,7 +1038,7 @@ table {
     float: left; } }
 
 @media screen and (max-width: 480px) {
-  .offset-sm-1 {
+  .offset-sm-1, #main .clearBackgroundMain #main-content {
     margin-left: 4.95%;
     display: inline-block;
     box-sizing: border-box;
@@ -1184,7 +1184,7 @@ h1 {
   font-size: 2.2rem; }
 
 a {
-  color: orange;
+  color: #FFFDBE;
   text-decoration: none; }
 
 body {
@@ -1194,7 +1194,7 @@ body {
   padding-top: 1%; }
   #main .clearBackgroundSidebar {
     background: rgba(255, 255, 255, 0.25);
-    padding: 10px;
+    padding: 0px 0px 10px 0px;
     min-width: 125px;
     max-width: 165px;
     border-radius: 0px 5px 5px 0px;
@@ -1202,28 +1202,94 @@ body {
     display: inline-block;
     height: 100%;
     box-sizing: border-box; }
+    #main .clearBackgroundSidebar #titreSidebar {
+      padding-top: 10px;
+      text-align: center;
+      background: rgba(0, 0, 0, 0.45);
+      border-bottom: 3px solid black;
+      height: 30px; }
     #main .clearBackgroundSidebar #sidebar {
       height: 80vh;
-      box-sizing: border-box; }
+      box-sizing: border-box;
+      width: 100%; }
+      #main .clearBackgroundSidebar #sidebar #interactionLists {
+        margin-top: 2px; }
+        #main .clearBackgroundSidebar #sidebar #interactionLists button {
+          margin-top: 8px;
+          color: white;
+          background: rgba(160, 0, 0, 0.7);
+          border: none;
+          width: 100%;
+          height: 30px; }
+        #main .clearBackgroundSidebar #sidebar #interactionLists .boutonA {
+          margin-top: 8px;
+          display: inline-block;
+          font: 11px BlinkMacSystemFont;
+          text-align: center;
+          color: white;
+          background: rgba(160, 0, 0, 0.7);
+          border: none;
+          width: 100%;
+          height: 30px;
+          align-items: flex-start;
+          box-sizing: border-box;
+          padding: 2px 6px 3px;
+          line-height: 25px; }
+      #main .clearBackgroundSidebar #sidebar ul li {
+        padding: 10px 0px 10px 0px;
+        text-align: center;
+        width: 100%;
+        background: rgba(255, 255, 255, 0.4);
+        border-bottom: 1px solid black; }
+        #main .clearBackgroundSidebar #sidebar ul li a {
+          color: #FFFDBE; }
   #main .clearBackgroundMain {
     background: rgba(255, 255, 255, 0.25);
-    padding: 10px;
+    padding: 0px 0px 10px 0px;
     margin: 0px 10px;
     border-radius: 5px;
     border: solid 1px black;
     display: inline-block; }
+    #main .clearBackgroundMain #titreMain {
+      padding-top: 10px;
+      text-align: center;
+      background: rgba(0, 0, 0, 0.45);
+      border-bottom: 3px solid black;
+      height: 30px; }
     #main .clearBackgroundMain #main-content {
       height: 80vh; }
       #main .clearBackgroundMain #main-content h1 {
         display: inline-block;
-        margin-bottom: 10px; }
-
-ul li {
-  margin: 10px; }
-
-.boutonA {
-  margin: 10px;
-  display: block; }
+        margin-top: 4px;
+        margin-bottom: 10px;
+        text-shadow: 1px 1px #574171; }
+      #main .clearBackgroundMain #main-content .ulTodo {
+        margin-left: 20px; }
+        #main .clearBackgroundMain #main-content .ulTodo form .buttonTodo {
+          margin-top: 8px;
+          color: white;
+          background: rgba(160, 0, 0, 0.7);
+          border: none;
+          width: 90px;
+          border-radius: 5px;
+          height: 30px; }
+        #main .clearBackgroundMain #main-content .ulTodo form .inputText {
+          height: 24px;
+          border-radius: 5px; }
+        #main .clearBackgroundMain #main-content .ulTodo .inputCheckbox {
+          height: 14px; }
+        #main .clearBackgroundMain #main-content .ulTodo .todoTraite {
+          margin-top: 10px; }
+        #main .clearBackgroundMain #main-content .ulTodo .todo {
+          margin-left: 8px;
+          background: rgba(255, 255, 255, 0.5);
+          width: 80%;
+          padding: 5px 5px;
+          margin: 4px 0px 0px 8px;
+          border: 1px solid black;
+          border-radius: 5px; }
+          #main .clearBackgroundMain #main-content .ulTodo .todo a {
+            color: #fffb8b; }
 
 #sidebar {
   display: inline-block; }
