--- a/td3/scss/_body.scss
+++ b/td3/scss/_body.scss
@@ -9,7 +9,7 @@ body{
     @extend .span-3;
     @extend .span-md-4;
     background: rgba(255, 255, 255, 0.25);
-    padding: 10px;
+    padding: 0px 0px 10px 0px;
     min-width: 125px;
     max-width: 165px;
     border-radius: 0px 5px 5px 0px;
@@ -17,9 +17,65 @@ body{
     display: inline-block;
     height: 100%;
     box-sizing: border-box;
+
+    & #titreSidebar{
+      padding-top: 10px;
+      text-align: center;
+      background: rgba(0, 0, 0, 0.45);
+      border-bottom: 3px solid black;
+      height:30px;
+    }
+
     & #sidebar{
       height: 80vh;
       box-sizing: border-box;
+      width:100%;
+
+      & #interactionLists{
+        margin-top: 2px;
+
+        & button{
+          margin-top: 8px;
+          color:white;
+          background: rgba(160, 0, 0, 0.7);
+          border: none;
+          width:100%;
+          height:30px;
+        }
+
+        & .boutonA{
+          margin-top: 8px;
+          display: inline-block;
+          font: 11px BlinkMacSystemFont;
+          text-align: center;
+          color:white;
+          background: rgba(160, 0, 0, 0.7);
+          border: none;
+          width:100%;
+          height:30px;
+          align-items: flex-start;
+          box-sizing: border-box;
+          padding: 2px 6px 3px;
+          line-height:25px;
+        }
+
+
+      }
+
+      & ul{
+        & li{
+          padding: 10px 0px 10px 0px;
+          text-align: center;
+          width: 100%;
+          background: rgba(255, 255, 255, 0.4);
+          border-bottom: 1px solid black;
+
+          & a{
+            color:$couleurLien;
+          }
+        }
+      }
+
     }
   }
 
@@ -28,20 +84,86 @@ body{
     @extend .span-md-15;
     @extend .span-sm-13;
 
-
     background: rgba(255, 255, 255, 0.25);
-    padding: 10px;
+    padding: 0px 0px 10px 0px;
     margin: 0px 10px;
     border-radius: 5px;
     border: solid 1px black;
     display: inline-block;
 
+    #titreMain{
+      padding-top: 10px;
+      text-align: center;
+      background: rgba(0, 0, 0, 0.45);
+      border-bottom: 3px solid black;
+      height:30px;
+    }
+
     & #main-content{
       height: 80vh;
-
+      @extend .span-18;
+      @extend .span-md-18;
+      @extend .span-sm-18;
+      @extend .offset-1;
+      @extend .offset-md-1;
+      @extend .offset-sm-1;
       & h1{
         display: inline-block;
+        margin-top: 4px;
         margin-bottom: 10px;
+        text-shadow: 1px 1px #574171;
+      }
+
+      .formAjoutListe{
+
+      }
+
+      & .ulTodo{
+        margin-left: 20px;
+
+        & form{
+          @extend .row;
+          @extend .span-15;
+          @extend .span-md-15;
+          @extend .span-sm-15;
+
+          & .buttonTodo{
+            margin-top: 8px;
+            color:white;
+            background: rgba(160, 0, 0, 0.7);
+            border: none;
+            width:90px;
+            border-radius: 5px;
+            height:30px;
+          }
+
+          & .inputText{
+            height:24px;
+            border-radius: 5px;
+          }
+        }
+
+        & .inputCheckbox{
+          height: 14px;
+        }
+
+        & .todoTraite{
+          margin-top: 10px;
+        }
+
+        & .todo{
+          margin-left: 8px;
+          background: rgba(255, 255, 255, 0.5);
+          width:80%;
+          padding: 5px 5px;
+          margin: 4px 0px 0px 8px;
+          border: 1px solid black;
+          border-radius: 5px;
+
+          & a{
+            color:darken($couleurLien,10);
+          }
+        }
       }
     }
   }
@@ -52,15 +174,12 @@ body{
 ul {
 
   & li{
-    margin:10px;
+    //margin:10px;
   }
 }
 
 
-.boutonA{
-  margin: 10px;
-  display: block;
-}
+
 
 #sidebar{
   display: inline-block;
