--- a/td3/views/lists/new.html
+++ b/td3/views/lists/new.html
@@ -18,7 +18,7 @@
 </head>
 <body ng-view="ngRoute">
   <div ng-controller="NewListController">
-    <form ng-submit="" novalidate>
+    <form ng-submit="" novalidate class="formAjoutListe">
       <input type="text" ng-model="newList.label" required ng-maxlength="30">
       <button ng-click="createList()">Enregistrer</button>
       <!-- <input type="submit" value="Envoyer" /> -->
