--- a/td3/views/todos/index.html
+++ b/td3/views/todos/index.html
@@ -1,16 +1,18 @@
 <h1>{{list.label}}</h1>
 <div>
-	<ul>
+	<ul class="ulTodo">
 		<form ng-submit="" novalidate>
-			<input type="text" ng-model="list.label" value="{{list.label}}" />
-			<button ng-click="updateList(list.label)">Modifier</button>
+			<input class="inputText" type="text" ng-model="list.label" value="{{list.label}}" />
+			<button class="buttonTodo" ng-click="updateList(list.label)">Modifier</button>
 			<br/><br/>
-			<input type="text" ng-model="Todo.todo.text" value="" />
-			<button ng-click="createTodo()">Ajouter todo</button>
+			<input class="inputText" type="text" ng-model="Todo.todo.text" value="" />
+			<button class="buttonTodo" ng-click="createTodo()">Ajouter todo</button>
 		</form>
-		<input type="checkbox" ng-model="hide" ng-change="showTacheTermine = ! showTacheTermine">
-		<label>Afficher les todos traité</label>
-		<li ng-repeat="todo in todos | filter:todo.priority" ng-show="showTacheTermine || todo.done == false">
+		<div class="todoTraite">
+			<input class="inputCheckbox" type="checkbox" ng-model="hide" ng-change="showTacheTermine = ! showTacheTermine">
+			<label>Afficher les todos traité</label>
+		</div>
+		<li class="todo" ng-repeat="todo in todos | filter:todo.priority" ng-show="showTacheTermine || todo.done == false">
 			<ng-comment> </ng-comment>
 		</li>
 		{{todolists}}
